[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-project"
version = "1.0.0"
description = "Scientific research project with integrated testing and documentation"
authors = [{name = "Project Author", email = "author@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true

