[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "active-inference-meta-pragmatic"
version = "1.0.0"
description = "Active Inference as a Meta-(Pragmatic/Epistemic) Method: A theoretical framework for understanding cognitive science implications"
authors = [{name = "Daniel Friedman", email = "daniel.friedman@example.com"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "psutil>=5.9.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true

[tool.uv]
# Inherits workspace settings from root pyproject.toml

[tool.hatch.build.targets.wheel]
packages = ["src"]