[project]
name = "fep_lean"
version = "0.1.0"
description = "Free Energy Principle, Active Inference & Bayesian Mechanics — Lean4 formalization orchestrator via OpenGauss"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Codomyrmex Team"}
]
keywords = [
    "free-energy-principle", "active-inference", "bayesian-mechanics",
    "lean4", "formal-verification", "opengauss", "codomyrmex"
]

dependencies = [
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

# NOTE: codomyrmex (root template) is not a distributable package (package=false).
# Infrastructure modules are accessed via sys.path in scripts/fep_analysis.py.
[project.scripts]
fep-lean = "src.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "-v --tb=short --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
