[project]
name = "small_code_project"
version = "0.1.0"
description = "Small fully-tested codebase with numerical optimization and analysis"
authors = [
    {name = "Code Research Author", email = "code@example.com"}
]

[tool.uv]
# Inherits workspace settings from root pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"