[project]
name = "small_prose_project"
version = "0.1.0"
description = "Manuscript-focused research project demonstrating prose, equations, and bullet points"
authors = [
    {name = "Research Author", email = "author@example.com"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"