[project]
name = "template-meta-project"
version = "0.1.0"
description = "A self-referential study on the research template infrastructure."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
