[project]
name = "traditional-newspaper"
version = "1.0.0"
description = "Exemplar: multi-slice manuscript and LaTeX preamble for tabloid-style newspaper PDFs via the template pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["src/newspaper"]
