[project]
name = "template-advanced-literature-review"
version = "0.1.0"
description = "Multi-phase systematic literature review with LLM filtering"
authors = [{name = "Daniel Ari Friedman", email = "daniel@activeinference.institute"}]
license = {text = "CC-BY-4.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["literature-review", "systematic-review", "multi-phase", "llm-filtering", "exoplanets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0",
    "defusedxml>=0.7.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "tqdm>=4.65.0",
    "python-dateutil>=2.8.0",
    "urllib3>=2.0.0",
    "rdflib>=7.0.0",
    "bibtexparser>=1.4.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "wordcloud>=1.9.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "types-PyYAML>=6.0.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "ollama>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--disable-warnings",
    "--tb=short",
    "--timeout=10",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may use network)",
    "llm: Tests requiring LLM access",
    "slow: Slow tests (>10 seconds)",
]
timeout = 10

[tool.coverage.run]
source = ["src"]
branch = true
# Shared literature/config/manuscript infrastructure is inherited from and
# coverage-gated by template_literature_meta_analysis. This exemplar's 90% gate
# measures the project-owned phase orchestration surface.
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.*",
    "src/__init__.py",
    "src/config.py",
    "src/config_validation.py",
    "src/literature/*",
    "src/manuscript/*",
    "*/template_literature_meta_analysis/src/*",
]

[tool.coverage.report]
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "B008",  # Do not perform function calls in argument defaults
]
unfixable = ["B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # Assert false in tests is okay
"scripts/*" = ["E402"]  # sys.path manipulation before imports is expected
"src/manuscript/variables/extractors/*" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "networkx.*",
    "sklearn.*",
    "matplotlib.*",
    "seaborn.*",
    "tqdm.*",
    "bibtexparser.*",
    "fuzzywuzzy.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.21",
]
